testsuite/bsc.typechecker/typeclasses/ATFUnifyHKError.bs
package ATFUnifyHKError where

-- Test that unifying a higher-kinded type function application (Elem a,
-- of kind * -> *) with a concrete type constructor (Maybe) requires the
-- corresponding class context (Container a Maybe).  Here it is missing, so
-- typecheck reports it (T0030).  The unification is forced by giving 'id'
-- the explicit type 'a -> Foo (Elem a) -> Foo Maybe'.
-- (See ATFFieldUnifyHKError for the same check via struct field access.)

class (Container :: * -> (* -> *) -> *) a s | a -> s where
  type Elem a = s

data Foo f = Foo (f Bool)

conv :: a -> Foo (Elem a) -> Foo Maybe
conv _ = id
